--- a/index.html
+++ b/index.html
@@ -20,8 +20,47 @@
 
 <body>
     <header class="header-bg">
-        <div class="row container d-flex align-items-center">
-            <div class="col-lg-6 ps-5">
+        <!-- Header-Nav  -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse mt-3" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item me-4">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item me-4">
+                            <a class="nav-link active" aria-current="page" href="#features">Features</a>
+                        </li>
+                        <li class="nav-item me-4">
+                            <a class="nav-link active" aria-current="page" href="#news">News</a>
+                        </li>
+                        <li class="nav-item me-3">
+                            <a class="nav-link active" aria-current="page" href="#subscribe">Subscribe</a>
+                        </li>
+
+
+
+                    </ul>
+                    <button class="border-0 button-bg py-2 px-4 ms-5 me-5" type="submit">Login</button>
+                </div>
+            </div>
+        </nav>
+
+
+
+
+
+
+        <!-- Header Image  -->
+
+        <div class="row container d-flex align-items-center p-5 ">
+            <div class="col-lg-6 ps-5 mb-5 ">
                 <small class="text-white">Computer-controlled digital transistorized with electronic advance</small>
                 <h2 class="text-white fw-bold">Honda CBR 300R</h2>
                 <p class="text-white">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
@@ -57,16 +96,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <img style="width: 321px;height: 260px; margin-top: 30px; padding-top:10px;"
-                    src="images/header-bike.png" alt="">
+            <div class="col-lg-6 col-sm-12 mb-5 ps-5">
+                <img class="img-fluid" src="images/header-bike.png" alt="">
             </div>
         </div>
     </header>
     <main class="main-section overflow-hidden">
         <!-- Fetured Bikes 2021  -->
 
-        <section class="container py-5 mb-5">
+        <section id="features" class="container py-5 mb-5">
             <div class="text-center my-5">
                 <h1 class="fw-bold">Fetured Bikes 2021</h1>
                 <p class="text-color">Best Bike Collection</p>
@@ -232,7 +270,7 @@
         </section>
         <!-- Latest News  -->
         <!-- This was an optional Part of our assignment-3 -->
-        <section>
+        <section id="news">
             <h1 class="fw-bold text-center py-5"> <span class="text-color">Latest</span> Bike <span
                     class="text-color">News</span></h1>
             <div class="container pb-3">
@@ -278,6 +316,8 @@
         </section>
     </main>
     <article>
+        <!-- Service  -->
+
         <!-- This Is  Bonus Part-1  -->
         <section class="bonus-part-bg">
             <h1 class="fw-bold text-center py-5">We <span class="text-color">Provide</span> Also...</h1>
@@ -327,7 +367,7 @@
 
     <footer>
         <!-- This Is  Bonus Part-2  -->
-        <section class="subscribe container py-5">
+        <section id="subscribe" class="subscribe container pt-5 pb-5">
             <div class="row align-items-center">
                 <div class="col-lg-5 col-sm-12">
                     <img style="width: 275px;
@@ -346,6 +386,8 @@
                 </div>
             </div>
         </section>
+        <p class="py-5 text-center text-danger "><small>© 2021 Muhibullah Muhsin. All rights reserved</small>
+        </p>
         <!-- Bootstrap Js  -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
